# Job-Genie

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  launch_enhanced.py  pyproject.toml  requirements-production.txt  requirements-updated.txt  streamlit_enhanced.py  streamlit_enhanced_methods.py  streamlit_optimizer.py
.github/workflows/: ci-cd.yml
Data/Processed/JobDescription/: JobDescription-Front-End-Developer-Job-Description.pdf3f0b0e23-7326-4a71-8db4-1160cb3c480d.json  JobDescription-sample-job-description.pdfca3a6189-c6a3-4fbc-bf51-4b3569b35a89.json
Data/Processed/Resumes/: Resume-Divya Zalte 2.5Yrs Exp as Dot Net Developer (1).pdfef624c06-f41f-4a6a-b820-ee04c918af8f.json  Resume-puja_resume(1)(1).pdf71dba55f-9d9d-4bd6-b7e2-c98448e8fa5d.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
scripts/: ResumeProcessor.py  integration_bridge.py
scripts/analytics/: insights_engine.py
scripts/ats/: optimization_engine.py
scripts/nlp/: advanced_processor.py
scripts/parsers/: enhanced_parser.py
scripts/utils/: config.py  quick_improvements.py  security.py
tests/: test_security.py
